--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jsontool",
-  "version": "0.1.0",
+  "repository": "https://github.com/r24y/jsontool.git",
+  "version": "0.0.0-development",
   "private": true,
   "dependencies": {
     "react": "^16.0.0",
@@ -11,6 +12,25 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "storybook": "start-storybook -p 9001 -c stories"
+  },
+  "release": {
+    "branch": "develop",
+    "analyzeCommits": {
+      "preset": "eslint",
+      "releaseRules": [
+        {
+          "tag": "Docs",
+          "scope": "README",
+          "release": "patch"
+        }
+      ]
+    }
+  },
+  "devDependencies": {
+    "@storybook/react": "^3.2.12",
+    "semantic-release": "^8.0.3"
   }
 }
