--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@semantic-release/last-release-npm": "^2.0.2",
     "@storybook/react": "^3.2.12",
     "conventional-changelog-eslint": "^0.2.0",
+    "eslint-config-react-app": "^2.0.1",
     "semantic-release": "^8.0.3"
   }
 }
