--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "repository": "https://github.com/r24y/jsontool.git",
   "version": "0.0.0-development",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
