--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GH_TOKEN
-  local_dir: build
+  local_dir: "${TRAVIS_BUILD_DIR}/build"
   on:
     branch: develop
 branches:
