--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - npm prune
 script:
   - npm test
-  - npm build
+  - npm run build
 after_success:
   - npm run semantic-release
 deploy:
