--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/babylon": "6.16.x",
     "conventional-changelog-eslint": "0.2.x",
     "eslint-config-react-app": "2.0.x",
+    "lerna": "^2.4.0",
     "semantic-release": "8.0.x"
   }
 }
