--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-explorer",
-  "repository": "https://github.com/r24y/jsontool.git",
+  "repository": "https://github.com/r24y/data-explorer.git",
   "version": "0.0.0-development",
   "private": true,
   "license": "MIT",
