Build: Remove semantic-release from subpackage
There's only a single version number that governs the webapp and the Chrome extension, so no need to have semantic-release handled separately in the subpackage.

--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -12,24 +12,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
-  },
-  "release": {
-    "branch": "develop",
-    "analyzeCommits": {
-      "preset": "eslint",
-      "releaseRules": [
-        {
-          "tag": "Docs",
-          "scope": "README",
-          "release": "patch"
-        }
-      ]
-    },
-    "getLastRelease": "../../config/get-last-release"
-  },
-  "devDependencies": {
-    "semantic-release": "^8.0.3"
+    "eject": "react-scripts eject"
   }
 }
