--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
   - npm test
   - npm run build
 after_success:
-  - npm run semantic-release
+  - npm run publish:all
 deploy:
   provider: pages
   skip_cleanup: true
