--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,10 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.0"
+  "version": "independent",
+  "commands": {
+    "publish": {
+      "allowBranch": "develop"
+    }
+  }
 }
