--- a/packages/data-explorer-constants/package.json
+++ b/packages/data-explorer-constants/package.json
@@ -4,7 +4,7 @@
   "description": "Common constants used in data-explorer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo 'No tests'"
   },
   "author": "Ryan Kennedy <r24y@users.noreply.github.com>",
   "license": "MIT",
