--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -3,6 +3,9 @@
   "repository": "https://github.com/r24y/data-explorer.git",
   "version": "0.0.0-semantically-released",
   "private": true,
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
