--- a/packages/explorer-bridge-json/package.json
+++ b/packages/explorer-bridge-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "explorer-bridge-json",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Bridge for inspecting a JSON structure",
   "main": "dist/index.js",
   "repository": "https://github.com/r24y/data-explorer/tree/develop/packages/explorer-bridge-json",
@@ -11,6 +11,7 @@
   "author": "Ryan Kennedy <r24y@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
+    "@r24y/data-explorer-constants": "file:../data-explorer-constants",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
@@ -20,7 +21,7 @@
     "jest": "^22.4.0"
   },
   "dependencies": {
-    "@r24y/data-explorer-constants": "file:../data-explorer-constants",
+    "@r24y/data-explorer-constants": "0.0.x",
     "json-hash": "^1.2.0"
   }
 }
