--- a/packages/react-explorer-components/.babelrc
+++ b/packages/react-explorer-components/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["env", "react-app"]
+  "presets": ["env", "react"],
+  "plugins": ["transform-object-rest-spread", "transform-class-properties"]
 }
