--- a/packages/react-explorer-components/package.json
+++ b/packages/react-explorer-components/package.json
@@ -17,8 +17,10 @@
   "devDependencies": {
     "@storybook/react": "^3.3.14",
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "chai-jest-diff": "^1.0.2",
     "enzyme": "^3.3.0",
