Attempt to fix repo-wide storybook

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ script:
 after_success:
   - git pull --rebase
   - npm run publish:all
+  - npm run storybook:build
+  - npm run deploy
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
