Build: Fix .babelrc

--- a/packages/react-explorer-components/.storybook/.babelrc
+++ b/packages/react-explorer-components/.storybook/.babelrc
@@ -1,5 +1,4 @@
 {
   "presets": ["env", "react"],
-  "plugins": ["transform-object-rest-spread", "transform-class-properties"],
-  "ignore": ["**/*.stories.js", "**/*.test.js"]
+  "plugins": ["transform-object-rest-spread", "transform-class-properties"]
 }
