--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,2 @@
 ---
-extends: react-app
-rules:
-  semi: [error, always]
-  comma-dangle: [error, always-multiline]
-  space-before-function-paren: [error, {
-    anonymous: always,
-    named: never,
-    asyncArrow: always,
-  }]
+extends: kennship
