--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-macros": "^2.1.0",
     "conventional-changelog-eslint": "0.2.x",
     "emotion": "^9.0.1",
+    "eslint-config-kennship": "^0.1.1",
     "eslint-config-react-app": "2.0.x",
     "gh-pages": "^1.1.0",
     "import-all.macro": "^2.0.3",
