--- a/packages/react-explorer-components/package.json
+++ b/packages/react-explorer-components/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/fontawesome": "^1.1.3",
     "@fortawesome/fontawesome-free-solid": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.17",
+    "@r24y/make-abortable": "0.0.1",
     "emotion": "^9.0.1",
     "prop-types": "^15.6.0",
     "react-emotion": "^9.0.1",
