--- a/packages/explorer-bridge-json/package.json
+++ b/packages/explorer-bridge-json/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.3",
   "description": "Bridge for inspecting a JSON structure",
   "main": "dist/index.js",
-  "repository": "https://github.com/r24y/data-explorer/tree/develop/packages/explorer-bridge-json",
+  "repository": "https://github.com/ryaninvents/data-explorer/tree/develop/packages/explorer-bridge-json",
   "scripts": {
     "build": "babel src --out-dir dist",
     "test": "jest"
@@ -11,7 +11,7 @@
   "files": [
     "dist/**"
   ],
-  "author": "Ryan Kennedy <r24y@users.noreply.github.com>",
+  "author": "Ryan Kennedy <ryaninvents@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -23,7 +23,7 @@
     "jest": "^22.4.0"
   },
   "dependencies": {
-    "@r24y/data-explorer-constants": "0.0.x",
+    "@ryaninvents/data-explorer-constants": "0.0.x",
     "json-hash": "^1.2.0"
   }
 }
