--- a/packages/react-explorer-components/package.json
+++ b/packages/react-explorer-components/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/react-fontawesome": "0.0.17",
     "abort-controller": "^1.0.2",
     "emotion": "^9.0.1",
+    "explorer-bridge-local": "file:../explorer-bridge-local",
     "make-abortable": "^1.0.2",
     "prop-types": "^15.6.0",
     "react-emotion": "^9.0.1",
