--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "data-explorer",
-  "repository": "https://github.com/r24y/data-explorer.git",
+  "repository": "https://github.com/ryaninvents/data-explorer.git",
   "version": "0.0.0-development",
   "private": true,
   "license": "MIT",
-  "homepage": "https://r24y.github.io/data-explorer",
+  "homepage": "https://ryaninvents.github.io/data-explorer",
   "dependencies": {
     "babel-generator": "^6.26.0",
     "babel-types": "^6.26.0",
