--- a/packages/react-explorer-components/package.json
+++ b/packages/react-explorer-components/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "React components for rendering devtools-style depictions of JS values",
   "main": "dist/index.js",
-  "repository": "https://github.com/r24y/data-explorer/tree/develop/packages/react-explorer-components",
+  "repository": "https://github.com/ryaninvents/data-explorer/tree/develop/packages/react-explorer-components",
   "scripts": {
     "build": "babel src --out-dir dist",
     "storybook": "start-storybook -p 9009",
@@ -12,7 +12,7 @@
   "files": [
     "dist/**"
   ],
-  "author": "Ryan Kennedy <r24y@users.noreply.github.com>",
+  "author": "Ryan Kennedy <ryaninvents@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
     "@storybook/react": "^3.3.14",
