feat(data-explorer-constants): add typedefs

--- a/package.json
+++ b/package.json
@@ -8,21 +8,8 @@
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {
-    "babel-generator": "^6.26.0",
-    "babel-types": "^6.26.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-monaco-editor": "^0.10.1"
-  },
+  "dependencies": {},
   "scripts": {
-    "start": "react-scripts start",
-    "build": "yarn turbo run build",
-    "test": "react-scripts test --env=jsdom && lerna run test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -c .storybook/dev -p 9009",
-    "storybook:build": "build-storybook -c .storybook/prod -o dist/storybook",
-    "deploy": "gh-pages -d dist",
     "release": "changeset publish"
   },
   "turbo": {
@@ -33,18 +20,10 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
-    "@storybook/addon-knobs": "^3.3.14",
-    "@storybook/react": "^3.2.19",
     "@types/babel-core": "6.25.x",
     "@types/babel-traverse": "6.25.x",
     "@types/babylon": "6.16.x",
-    "babel-plugin-macros": "^2.1.0",
-    "conventional-changelog-eslint": "0.2.x",
-    "emotion": "^9.0.1",
-    "eslint-config-react-app": "2.0.x",
     "gh-pages": "^1.1.0",
-    "import-all.macro": "^2.0.3",
-    "react-scripts": "^3.4.1",
     "turbo": "^1.2.12"
   }
 }
